--- a/app/src/main/res/layout/activity_park_search.xml
+++ b/app/src/main/res/layout/activity_park_search.xml
@@ -6,8 +6,7 @@
     android:id="@+id/park_search_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ParkSearchActivity"
-    android:paddingHorizontal="24dp">
+    tools:context=".ParkSearchActivity">
 
     <!-- Title -->
     <TextView
@@ -22,7 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp" />
 
-    <!-- Horizontal container -->
+    <!-- Horizontal container for EditText + Button -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/search_bar_container"
         android:layout_width="0dp"
@@ -30,13 +29,15 @@
         app:layout_constraintTop_toBottomOf="@id/park_search_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="16dp">
 
         <EditText
             android:id="@+id/state_code_input"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:hint="Enter State Code"
             android:inputType="text"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +49,7 @@
         <Button
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:text="Search"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
