--- a/app/src/main/res/layout/activity_park_search.xml
+++ b/app/src/main/res/layout/activity_park_search.xml
@@ -56,4 +56,17 @@
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- RecyclerView should be here, not inside the above ConstraintLayout -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/park_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:padding="8dp"
+        app:layout_constraintTop_toBottomOf="@id/search_bar_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_park" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
