--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="text_secondary">#757575</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="gray_hint">#888888</color>
+
 </resources>
