--- a/app/src/main/res/layout/activity_afterlogin.xml
+++ b/app/src/main/res/layout/activity_afterlogin.xml
@@ -5,7 +5,9 @@
     android:id="@+id/afterlogin_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="24dp"
+    android:fitsSystemWindows="true"
+    android:clipToPadding="false">
 
     <TextView
         android:id="@+id/screenText"
@@ -27,7 +29,8 @@
         app:layout_constraintTop_toBottomOf="@id/screenText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"/>
+        android:layout_marginTop="24dp"
+        android:background="@drawable/spinner_background" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_stickers"
@@ -39,7 +42,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:spanCount="3"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:clipToPadding="false"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp" />
 
     <Button
         android:id="@+id/btn_send"
@@ -48,6 +55,6 @@
         android:text="@string/send_sticker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
