--- a/app/src/main/res/layout/activity_afterlogin.xml
+++ b/app/src/main/res/layout/activity_afterlogin.xml
@@ -53,8 +53,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/send_sticker"
+        app:layout_constraintBottom_toTopOf="@id/btn_view_history"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="12dp"/>
+
+    <Button
+        android:id="@+id/btn_view_history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Sticker Receive History"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
