--- a/app/src/main/res/layout/item_received_sticker.xml
+++ b/app/src/main/res/layout/item_received_sticker.xml
@@ -15,27 +15,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_sender"
+    <LinearLayout
+        android:id="@+id/text_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="From: Alice"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
+        android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@id/iv_sticker"
-        app:layout_constraintTop_toTopOf="@id/iv_sticker"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="12dp"/>
+        android:layout_marginStart="12dp">
 
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Jun 25, 2025 14:30"
-        android:textSize="12sp"
-        android:textColor="@android:color/darker_gray"
-        app:layout_constraintStart_toStartOf="@id/tv_sender"
-        app:layout_constraintTop_toBottomOf="@id/tv_sender"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/tv_sender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="From: Alice"
+            android:textSize="16sp"
+            android:layout_marginBottom="8dp"
+            android:textColor="@android:color/black"/>
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Jun 25, 2025 14:30"
+            android:textSize="12sp"
+            android:textColor="@android:color/darker_gray" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
