--- a/app/src/main/res/layout/activity_afterlogin.xml
+++ b/app/src/main/res/layout/activity_afterlogin.xml
@@ -20,23 +20,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Spinner
-        android:id="@+id/spinner_recipient"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/recipient_dropdown_layout"
         android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:prompt="@string/select_recipient"
-        android:spinnerMode="dropdown"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/screenText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp"
-        android:background="@drawable/spinner_background" />
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+
+        <AutoCompleteTextView
+            android:id="@+id/dropdown_recipient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Select recipient..."
+            android:inputType="none" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_stickers"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/spinner_recipient"
+        app:layout_constraintTop_toBottomOf="@id/recipient_dropdown_layout"
         app:layout_constraintBottom_toTopOf="@id/btn_send"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
