--- a/app/src/main/res/layout/item_received_sticker.xml
+++ b/app/src/main/res/layout/item_received_sticker.xml
@@ -33,15 +33,16 @@
             android:text="From: Alice"
             android:textSize="16sp"
             android:layout_marginBottom="8dp"
-            android:textColor="@android:color/black"/>
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Jun 25, 2025 14:30"
-            android:textSize="12sp"
-            android:textColor="@android:color/darker_gray" />
+            android:textSize="14sp"
+            android:textColor="@android:color/darker_gray"
+             />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
