--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,11 @@
         app:layout_constraintTop_toBottomOf="@id/group_name_tv" />
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/sendSticks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="A7"
+        android:text="Send Sticks"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
